<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="atm">ATM Consultoria</string>
    <string name="atm_email">atm.consultoria@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="logo_image_description">Logo ATM Consultoria</string>

    <string name="nav_home">Principal</string>
    <string name="nav_services">Serviços</string>
    <string name="nav_clientes">Clientes</string>
    <string name="group_comunicacao">Comunicação</string>
    <string name="nav_contact">Contato</string>
    <string name="nav_sobre">Sobre</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_service_2">A definição e análise de indicadores permitem avaliar o desempenho da organização de acordo com as metas estabelecidas, possibilitando seu acompanhamento e permitindo que sejam feitas as adequações necessárias para atingir os resultados desejados.</string>
    <string name="text_service_1">Qualidade é uma responsabilidade de todos os níves da organiação. Ao implementar um sistema de gestão de qualidade, a empresa se prepara melhor para enfrentar os riscos qualitativos. Nossas normas de gestão que visam construir um modelo de gestão são a ISO 9001, ISO 14001, ISO 18001, ISO 31000, a certificação</string>
    <string name="text_title_service_2">Indicadores de desempenho</string>
    <string name="text_title_service_1">Sistema de gestão de qualidade</string>

    <string name="cliente_3M">3M</string>
    <string name="cliente_bieffe">Bieffe</string>
    <string name="cliente_sundow_motos">Sundows Motos</string>
    <string name="cliente_olx">OLX</string>
    <string name="cliente_mercado_livre">Mercado Livre</string>
    <string name="cliente_souza_cruz">Souza Cruz</string>
    <string name="text_about_1">A ATM Consultoria tem como missão apoiar as organizações que desejam alcançar o sucesso através da excelência em gestão e da busca pela Qualidade.</string>
    <string name="text_about_2">Nosso trabalho é dar suporte às empresas que desejam se certificar em padrões de qualidade ou investir no desenvolvimento e evolução de sua gestão, por meio da otimização dos processos e da disseminação dos Fundamentos e Critérios da Excelência.</string>
    <string name="version">Versão 1.0</string>
    <string name="text_talk_to_us">Fale conosco</string>
    <string name="logo_atm_consultoria">Logo ATM Consultoria</string>
    <string name="text_costumers">Em mais de 15 anos de existência, a ATM acumula experiência e <i>know how</i> em empresas nacionais e multinacionais de diversos portes, em vários segmentos e em todo o território nacional.</string>
    <string name="about_page_contact">Entre em contato conosco:</string>
    <string name="google_atm">https://www.google.com/search?q=Atm+Consultoria</string>
</resources>
