<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_costumers"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_clientes" />
    </group>

    <item android:title="@string/group_comunicacao">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/nav_contact" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_sobre" />
        </menu>
    </item>

</menu>
